language/tests/regent/compile_fail/invalid_println1.rg
-- Copyright 2023 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

-- fails-with:
-- invalid_println1.rg:25: println received 0 arguments but format string has 1 interpolations
--   format.println("Hello {} world!")
--         ^

import "regent"

local format = require("std/format")

task main()
  format.println("Hello {} world!")
end
regentlib.start(main)
